unpackaged/main/default/objects/Asunto__c/fields/Garantia_Nafin__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Nafin__c</fullName>
    <label>Garantía Nafin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Bancomext</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>