unpackaged/main/default/objects/Asunto__c/fields/Garantia_Nafin_Recuperada__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Nafin_Recuperada__c</fullName>
    <label>Garantía Nafin Recuperada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>