unpackaged/main/default/objects/Asunto__c/fields/GASTOS_DE_JUICIO__c.field-meta.xml
<CustomField>
    <fullName>GASTOS_DE_JUICIO__c</fullName>
    <label>GASTOS DE JUICIO</label>
    <summarizedField>GASTOS_DE_JUICIO__c.IMPORTE__c</summarizedField>
    <summaryForeignKey>GASTOS_DE_JUICIO__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>