unpackaged/main/default/objects/Asunto__c/fields/Grado_de_Embargo__c.field-meta.xml
<CustomField>
    <fullName>Grado_de_Embargo__c</fullName>
    <label>Grado de Embargo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primero</fullName>
            </value>
            <value>
                <fullName>Segundo</fullName>
            </value>
            <value>
                <fullName>Tercero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>