unpackaged/main/default/objects/Asunto__c/fields/HONORARIOS_COBRADOS__c.field-meta.xml
<CustomField>
    <fullName>HONORARIOS_COBRADOS__c</fullName>
    <label>HONORARIOS COBRADOS</label>
    <summarizedField>HONORARIOS_COBRADOS__c.IMPORTE__c</summarizedField>
    <summaryForeignKey>HONORARIOS_COBRADOS__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>