unpackaged/main/default/objects/Asunto__c/fields/HONORARIOS_PAGADOS__c.field-meta.xml
<CustomField>
    <fullName>HONORARIOS_PAGADOS__c</fullName>
    <label>HONORARIOS PAGADOS</label>
    <summarizedField>HONORARIOS_PAGADOS__c.IMPORTE__c</summarizedField>
    <summaryForeignKey>HONORARIOS_PAGADOS__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>