unpackaged/main/default/objects/Asunto__c/fields/HONORARIOS_POR_RECUPERACION__c.field-meta.xml
<CustomField>
    <fullName>HONORARIOS_POR_RECUPERACION__c</fullName>
    <label>HONORARIOS POR RECUPERACION</label>
    <summarizedField>HONORARIOS_POR_RECUPERACION__c.IMPORTE__c</summarizedField>
    <summaryForeignKey>HONORARIOS_POR_RECUPERACION__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>