unpackaged/main/default/objects/Asunto__c/fields/HOY__c.field-meta.xml
<CustomField>
    <fullName>HOY__c</fullName>
    <description>Dia Mes y Año de Elaboración de la Demanda, "Today"</description>
    <label>HOY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>