unpackaged/main/default/objects/Asunto__c/fields/IMPORTE_CON_LETRAS__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE_CON_LETRAS__c</fullName>
    <label>IMPORTE CON LETRAS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>