unpackaged/main/default/objects/Asunto__c/fields/Importe_de_Adeudo_Cert_Contable__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_Adeudo_Cert_Contable__c</fullName>
    <label>Importe de Adeudo Certificación Contable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>