unpackaged/main/default/objects/Asunto__c/fields/Iniciales_de_Abogado_Externo__c.field-meta.xml
<CustomField>
    <fullName>Iniciales_de_Abogado_Externo__c</fullName>
    <formula>Abogado_Externo__r.Iniciales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Iniciales de Abogado Externo</label>
    <type>Text</type>
</CustomField>