unpackaged/main/default/objects/Asunto__c/fields/Juzgado__c.field-meta.xml
<CustomField>
    <fullName>Juzgado__c</fullName>
    <label>JUZGADO Y UBICACIÓN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>