unpackaged/main/default/objects/Asunto__c/fields/JUZGADO_EXHORTADO__c.field-meta.xml
<CustomField>
    <fullName>JUZGADO_EXHORTADO__c</fullName>
    <label>JUZGADO EXHORTADO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>