unpackaged/main/default/objects/Asunto__c/fields/LUGAR_DE_DOMICILIO_DEL_DEMANDADO__c.field-meta.xml
<CustomField>
    <fullName>LUGAR_DE_DOMICILIO_DEL_DEMANDADO__c</fullName>
    <description>Esta información define a los abogados corresponsales

Adicionalmente sirve para saber donde hay que hacer búsqueda de bienes</description>
    <label>LUGAR DE DOMICILIO DEL DEMANDADO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>