unpackaged/main/default/objects/Asunto__c/fields/MONTO__c.field-meta.xml
<CustomField>
    <fullName>MONTO__c</fullName>
    <label>MONTO</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>