unpackaged/main/default/objects/Asunto__c/fields/MONTO_CREDITO_AUT_TEXTO__c.field-meta.xml
<CustomField>
    <fullName>MONTO_CREDITO_AUT_TEXTO__c</fullName>
    <label>MONTO CREDITO AUT TEXTO</label>
    <type>TextArea</type>
</CustomField>