unpackaged/main/default/objects/Asunto__c/fields/MONTO_CREDITO_AUTORIZADO__c.field-meta.xml
<CustomField>
    <fullName>MONTO_CREDITO_AUTORIZADO__c</fullName>
    <label>MONTO CREDITO AUTORIZADO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>