unpackaged/main/default/objects/Asunto__c/fields/Monto_Importe_Only__c.field-meta.xml
<CustomField>
    <fullName>Monto_Importe_Only__c</fullName>
    <label>Monto Importe Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>