unpackaged/main/default/objects/Asunto__c/fields/Monto_Pagado_Por_Nafin__c.field-meta.xml
<CustomField>
    <fullName>Monto_Pagado_Por_Nafin__c</fullName>
    <label>Monto Pagado Por Nafin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>