unpackaged/main/default/objects/Asunto__c/fields/Monto_Reclamado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Reclamado__c</fullName>
    <label>SUERTE PRINCIPAL</label>
    <summarizedField>Numero_de_Credito__c.Monto__c</summarizedField>
    <summaryForeignKey>Numero_de_Credito__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>