unpackaged/main/default/objects/Asunto__c/fields/Monto_Recuperable__c.field-meta.xml
<CustomField>
    <fullName>Monto_Recuperable__c</fullName>
    <formula>IF(ISPICKVAL( Posibilidades_de_Recuperacion__c , 'Alta'),  Monto_Reclamado__c, 
IF(ISPICKVAL( Posibilidades_de_Recuperacion__c , 'Media'), Monto_Reclamado__c / 2, 
IF(ISPICKVAL( Posibilidades_de_Recuperacion__c , 'Baja'), Monto_Reclamado__c / 4 , 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Recuperable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>