unpackaged/main/default/objects/Asunto__c/fields/Monto_Recuperado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Recuperado__c</fullName>
    <label>RECUPERACIONES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>