unpackaged/main/default/objects/Asunto__c/fields/MONTO_TEXTO__c.field-meta.xml
<CustomField>
    <fullName>MONTO_TEXTO__c</fullName>
    <formula>IF(CONTAINS(TEXT(MONTO__c),"."),
 VALUE(TEXT(MONTO__c)+"0"),
 VALUE(TEXT(MONTO__c)+".00")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MONTO TEXTO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>