unpackaged/main/default/objects/Asunto__c/fields/MUNICIPIO__c.field-meta.xml
<CustomField>
    <fullName>MUNICIPIO__c</fullName>
    <label>MUNICIPIO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>