unpackaged/main/default/objects/Asunto__c/fields/NDC_Importe_Only__c.field-meta.xml
<CustomField>
    <fullName>NDC_Importe_Only__c</fullName>
    <label>NDC Importe Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>