unpackaged/main/default/objects/Asunto__c/fields/Negociaci_n_Extra_Judicial__c.field-meta.xml
<CustomField>
    <fullName>Negociaci_n_Extra_Judicial__c</fullName>
    <label>Negociación Extra Judicial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acercamiento con el cliente</fullName>
            </value>
            <value>
                <fullName>Negociación Concluida</fullName>
            </value>
            <value>
                <fullName>Propuesta Aprobada y en Ejecución</fullName>
            </value>
            <value>
                <fullName>Recepción de Propuesta y Preparar para Comité para Autorización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>