unpackaged/main/default/objects/Asunto__c/fields/Nivel_de_Etapa__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Etapa__c</fullName>
    <label>Nivel de Etapa</label>
    <summarizedField>Etapa_Judicial__c.Nivel_de_Etapa__c</summarizedField>
    <summaryForeignKey>Etapa_Judicial__c.Asunto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>