unpackaged/main/default/objects/Asunto__c/fields/No0000__c.field-meta.xml
<CustomField>
    <fullName>No0000__c</fullName>
    <description>No. de AGENCIA</description>
    <label>No.</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>