unpackaged/main/default/objects/Asunto__c/fields/No_Factura__c.field-meta.xml
<CustomField>
    <fullName>No_Factura__c</fullName>
    <inlineHelpText>Facturas de SECAAL</inlineHelpText>
    <label>No. Factura</label>
    <type>TextArea</type>
</CustomField>