unpackaged/main/default/objects/Asunto__c/fields/Nuevo_Expediente_Judicia_apelacionl__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Expediente_Judicia_apelacionl__c</fullName>
    <label>Nuevo Expediente Judicial (apelación)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>