unpackaged/main/default/objects/Asunto__c/fields/Nuevo_Expediente_Judicial_amparo__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Expediente_Judicial_amparo__c</fullName>
    <label>Nuevo Expediente Judicial (amparo)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>