unpackaged/main/default/objects/Asunto__c/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <formula>Sucursal__r.Ciudad2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza</label>
    <type>Text</type>
</CustomField>