unpackaged/main/default/objects/Asunto__c/fields/Posibilidades_de_Recuperacion__c.field-meta.xml
<CustomField>
    <fullName>Posibilidades_de_Recuperacion__c</fullName>
    <label>Posibilidades de Recuperacion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
                <default>true</default>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Nula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>