unpackaged/main/default/objects/Asunto__c/fields/Presupuesto_Recuperacion__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Recuperacion__c</fullName>
    <label>Presupuesto Recuperación Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>