unpackaged/main/default/objects/Asunto__c/fields/Presupuesto_Recuperacion_Fecha__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Recuperacion_Fecha__c</fullName>
    <label>Presupuesto Recuperación Fecha</label>
    <type>Date</type>
</CustomField>