unpackaged/main/default/objects/Asunto__c/fields/Problematica__c.field-meta.xml
<CustomField>
    <fullName>Problematica__c</fullName>
    <label>Problematica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceso Privado de Fraccionamiento</fullName>
            </value>
            <value>
                <fullName>Defensa del Demandado</fullName>
            </value>
            <value>
                <fullName>Emplazamiento por exhorto</fullName>
            </value>
            <value>
                <fullName>Fallecimiento</fullName>
            </value>
            <value>
                <fullName>Ilocalización</fullName>
            </value>
            <value>
                <fullName>Inseguridad</fullName>
            </value>
            <value>
                <fullName>Insolvencia por garantías</fullName>
            </value>
            <value>
                <fullName>Juicio Laboral</fullName>
            </value>
            <value>
                <fullName>Reposición de Autos</fullName>
            </value>
            <value>
                <fullName>Variación de Domicilio</fullName>
            </value>
            <value>
                <fullName>Liquidez Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>