unpackaged/main/default/objects/Asunto__c/fields/R_F_C__c.field-meta.xml
<CustomField>
    <fullName>R_F_C__c</fullName>
    <label>R F C</label>
    <length>20</length>
    <type>Text</type>
</CustomField>