unpackaged/main/default/objects/Asunto__c/fields/Razones_del_Dictamen__c.field-meta.xml
<CustomField>
    <fullName>Razones_del_Dictamen__c</fullName>
    <label>Razones del Dictamen</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dictamen_del_Expediente__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bienes Susceptibles de Embargo</fullName>
            </value>
            <value>
                <fullName>Con Garantías</fullName>
            </value>
            <value>
                <fullName>Falta Información en Expediente</fullName>
            </value>
            <value>
                <fullName>Sin Bienes Inmuebles o Con Bienes Inmuebles Gravados al momento de otorgar Crédito</fullName>
            </value>
            <value>
                <fullName>Insolvencia por acreedores que embargan las propiedades</fullName>
            </value>
            <value>
                <fullName>Insolvencia por garantias constituidas a favor de terceros</fullName>
            </value>
            <value>
                <fullName>Insolvencia provocada</fullName>
            </value>
            <value>
                <fullName>N/A ( Con Bienes Adicionales)</fullName>
            </value>
            <value>
                <fullName>Sin Bienes Inmuebles Gravados al momento de otorgar Crédito</fullName>
            </value>
            <value>
                <fullName>Con Bienes Inmuebles Gravados al momento de otorgar Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>