unpackaged/main/default/objects/Asunto__c/fields/Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal__c</fullName>
    <label>Representante Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>