unpackaged/main/default/objects/Asunto__c/fields/Reservas__c.field-meta.xml
<CustomField>
    <fullName>Reservas__c</fullName>
    <label>Reservas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>