unpackaged/main/default/objects/Asunto__c/fields/Saldo_Contable__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Contable__c</fullName>
    <label>Saldo Contable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>