unpackaged/main/default/objects/Asunto__c/fields/Status_del_Asunto__c.field-meta.xml
<CustomField>
    <fullName>Status_del_Asunto__c</fullName>
    <formula>IF(Etapa_Judicial_RO__c = "Cierre de Juicio", "Juicio Cerrado",
IF( NOT(ISPICKVAL( Esquema_Salida_o_Recuperaci_n__c,'')), "Asunto Recuperado", "En Jurídico"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status del Asunto</label>
    <type>Text</type>
</CustomField>