unpackaged/main/default/objects/Asunto__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Asuntos</relationshipLabel>
    <relationshipName>Asuntos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>