unpackaged/main/default/objects/Asunto__c/fields/Suma_de_Abonos_2017__c.field-meta.xml
<CustomField>
    <fullName>Suma_de_Abonos_2017__c</fullName>
    <label>Suma de Abonos 2017</label>
    <summarizedField>Abono_en_cuenta__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Abono_en_cuenta__c.Fecha__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2017</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Abono_en_cuenta__c.Fecha__c</field>
        <operation>lessThan</operation>
        <value>1/1/2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Abono_en_cuenta__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>