unpackaged/main/default/objects/Asunto__c/fields/Suma_de_Abonos__c.field-meta.xml
<CustomField>
    <fullName>Suma_de_Abonos__c</fullName>
    <description>Suma de todos los abonos parciales</description>
    <inlineHelpText>Suma de todos los abonos parciales</inlineHelpText>
    <label>Suma de Abonos</label>
    <summarizedField>Abono_en_cuenta__c.Importe__c</summarizedField>
    <summaryForeignKey>Abono_en_cuenta__c.Asunto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>