unpackaged/main/default/objects/Asunto__c/fields/TASA_ORDINARIA_PACTADA_EN_EL_PAGAR__c.field-meta.xml
<CustomField>
    <fullName>TASA_ORDINARIA_PACTADA_EN_EL_PAGAR__c</fullName>
    <description>No todos los contratos traen la misma tasa</description>
    <label>TASA</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>