unpackaged/main/default/objects/Asunto__c/fields/Tipo_de_Juicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Juicio__c</fullName>
    <label>JUICIO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>