unpackaged/main/default/objects/Asunto__c/fields/Ubicacion_de_las_Garantias__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion_de_las_Garantias__c</fullName>
    <label>Ubicación de las Garantías</label>
    <type>TextArea</type>
</CustomField>