unpackaged/main/default/objects/Asunto__c/fields/Ultima_Actualizacion_de_Etapa__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Actualizacion_de_Etapa__c</fullName>
    <label>Ultima Actualización de Etapa</label>
    <type>DateTime</type>
</CustomField>