unpackaged/main/default/objects/Asunto__c/fields/Valor_de_Avaluo_Garantias__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Avaluo_Garantias__c</fullName>
    <label>Valor de Avaluo Garantías</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>