unpackaged/main/default/objects/Asunto__c/validationRules/Fecha_recup_si_hay_esquema_de_salida.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_recup_si_hay_esquema_de_salida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Esquema_Salida_o_Recuperaci_n__c , '')), ISBLANK( Fecha_de_Recuperacion__c  ))</errorConditionFormula>
    <errorDisplayField>Fecha_de_Recuperacion__c</errorDisplayField>
    <errorMessage>Fecha de Recuperación es requerida cuando se selecciona un Esquema de Salida.</errorMessage>
</ValidationRule>