unpackaged/main/default/objects/Asunto__c/validationRules/Monto_requerido_si_hay_esquema_de_salida.validationRule-meta.xml
<ValidationRule>
    <fullName>Monto_requerido_si_hay_esquema_de_salida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Esquema_Salida_o_Recuperaci_n__c , '')), ISBLANK( Monto_Recuperado__c ))</errorConditionFormula>
    <errorDisplayField>Monto_Recuperado__c</errorDisplayField>
    <errorMessage>Monto Recuperado es requerido cuando se selecciona un Esquema de Salida.</errorMessage>
</ValidationRule>