unpackaged/main/default/objects/Asunto__c/listViews/Adjudicados.listView-meta.xml
<ListView>
    <fullName>Adjudicados</fullName>
    <columns>NAME</columns>
    <columns>Abogado_Interno__c</columns>
    <columns>Abogado_Externo__c</columns>
    <columns>Acreditado__c</columns>
    <columns>Monto_Reclamado__c</columns>
    <columns>Etapa_Judicial_RO__c</columns>
    <columns>Fecha_de_Recuperacion__c</columns>
    <columns>Monto_Recuperado__c</columns>
    <columns>Juzgado__c</columns>
    <columns>Expediente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Esquema_Salida_o_Recuperaci_n__c</field>
        <operation>equals</operation>
        <value>Adjudicación</value>
    </filters>
    <label>Adjudicados</label>
</ListView>