unpackaged/main/default/objects/Asunto__c/listViews/Asuntos_Ingresados_el_27_01_20.listView-meta.xml
<ListView>
    <fullName>Asuntos_Ingresados_el_27_01_20</fullName>
    <columns>NAME</columns>
    <columns>Fecha_de_Ingreso__c</columns>
    <columns>Acreditado__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Fecha_de_Ingreso__c</field>
        <operation>equals</operation>
        <value>1/27/2020</value>
    </filters>
    <label>Asuntos Ingresados el 27/01/20</label>
</ListView>