unpackaged/main/default/objects/Asunto__c/listViews/Comercial.listView-meta.xml
<ListView>
    <fullName>Comercial</fullName>
    <columns>NAME</columns>
    <columns>Abogado_Externo__c</columns>
    <columns>Abogado_Interno__c</columns>
    <columns>Acreditado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direcci_n_o_Filial__c</field>
        <operation>equals</operation>
        <value>Comercial</value>
    </filters>
    <label>Comercial</label>
</ListView>