unpackaged/main/default/objects/Asunto__c/listViews/Factoraje.listView-meta.xml
<ListView>
    <fullName>Factoraje</fullName>
    <columns>NAME</columns>
    <columns>Abogado_Interno__c</columns>
    <columns>Abogado_Externo__c</columns>
    <columns>Acreditado__c</columns>
    <columns>Monto_Reclamado__c</columns>
    <columns>Etapa_Judicial_RO__c</columns>
    <columns>Juzgado__c</columns>
    <columns>Expediente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direcci_n_o_Filial__c</field>
        <operation>equals</operation>
        <value>Factoraje</value>
    </filters>
    <label>Factoraje</label>
</ListView>