unpackaged/main/default/objects/Asunto__c/listViews/Juicios_Cerrados.listView-meta.xml
<ListView>
    <fullName>Juicios_Cerrados</fullName>
    <columns>NAME</columns>
    <columns>Abogado_Interno__c</columns>
    <columns>Abogado_Externo__c</columns>
    <columns>Acreditado__c</columns>
    <columns>Monto_Reclamado__c</columns>
    <columns>Etapa_Judicial_RO__c</columns>
    <columns>Juzgado__c</columns>
    <columns>Expediente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_del_Asunto__c</field>
        <operation>equals</operation>
        <value>Juicio Cerrado</value>
    </filters>
    <label>Juicios Cerrados</label>
</ListView>