unpackaged/main/default/objects/Asunto__c/listViews/Jurisdiccion_Monterrey.listView-meta.xml
<ListView>
    <fullName>Jurisdiccion_Monterrey</fullName>
    <columns>NAME</columns>
    <columns>Ciudad_en_donde_se_encuentra_el_Juzgado__c</columns>
    <columns>Fecha_de_Ingreso__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ciudad_en_donde_se_encuentra_el_Juzgado__c</field>
        <operation>startsWith</operation>
        <value>Monterrey</value>
    </filters>
    <label>Jurisdiccion Monterrey</label>
</ListView>