unpackaged/main/default/objects/Asunto__c/listViews/Todos_los_asuntos.listView-meta.xml
<ListView>
    <fullName>Todos_los_asuntos</fullName>
    <columns>NAME</columns>
    <columns>Fecha_de_Ingreso__c</columns>
    <columns>Acreditado__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Fecha_de_Ingreso__c</field>
        <operation>equals</operation>
        <value>1/17/2020</value>
    </filters>
    <label>Todos los asuntos (Filtrado por Fecha)</label>
</ListView>