unpackaged/main/default/objects/Asunto__c/listViews/Vencidas.listView-meta.xml
<ListView>
    <fullName>Vencidas</fullName>
    <columns>NAME</columns>
    <columns>Acreditado__c</columns>
    <columns>Fecha_de_Ingreso__c</columns>
    <columns>Plaza__c</columns>
    <columns>Sucursal__c</columns>
    <columns>Zona__c</columns>
    <columns>Monto_Reclamado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Castigada_o_Vencida__c</field>
        <operation>equals</operation>
        <value>Vencida</value>
    </filters>
    <label>Vencidas</label>
</ListView>